# pix2chocolate-shop

./: .dockerignore  README.md  docker-compose.yaml
main_app/: .gitignore  Dockerfile  app.py  pyproject.toml
part_maker/: .gitignore  Dockerfile  app.py  generate_cad_part.py  pyproject.toml
preview_maker/: .gitignore  Dockerfile  app.py  app_old.py  generate_preview.py  pyproject.toml
