[project]
name = "pix2chocolate-shop_part_maker"
version = "0.1.0"
description = "REST API exporting chocolate biscuit STLs from displacement maps"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "bpy>=5.0.1",
    "fastapi>=0.135.3",
    "python-multipart>=0.0.22",
    "uvicorn>=0.43.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
]
